; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Mednafen/mednafen-1.21/src/drivers/extr_scalebit.c_scale4x.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Mednafen/mednafen-1.21/src/drivers/extr_scalebit.c_scale4x.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32, i8*, i32, i32, i32, i32)* @scale4x to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @scale4x(i8* %0, i32 %1, i8* %2, i32 %3, i32 %4, i32 %5, i32 %6) #0 {
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i8*, align 8
  store i8* %0, i8** %8, align 8
  store i32 %1, i32* %9, align 4
  store i8* %2, i8** %10, align 8
  store i32 %3, i32* %11, align 4
  store i32 %4, i32* %12, align 4
  store i32 %5, i32* %13, align 4
  store i32 %6, i32* %14, align 4
  %17 = load i32, i32* %12, align 4
  %18 = mul i32 2, %17
  %19 = load i32, i32* %13, align 4
  %20 = mul i32 %18, %19
  store i32 %20, i32* %15, align 4
  %21 = load i32, i32* %15, align 4
  %22 = add i32 %21, 7
  %23 = and i32 %22, -8
  store i32 %23, i32* %15, align 4
  %24 = load i32, i32* %15, align 4
  %25 = mul i32 6, %24
  %26 = call i8* @malloc(i32 %25)
  store i8* %26, i8** %16, align 8
  %27 = load i8*, i8** %16, align 8
  %28 = icmp ne i8* %27, null
  br i1 %28, label %30, label %29

29:                                               ; preds = %7
  br label %43

30:                                               ; preds = %7
  %31 = load i8*, i8** %8, align 8
  %32 = load i32, i32* %9, align 4
  %33 = load i8*, i8** %16, align 8
  %34 = load i32, i32* %15, align 4
  %35 = load i8*, i8** %10, align 8
  %36 = load i32, i32* %11, align 4
  %37 = load i32, i32* %12, align 4
  %38 = load i32, i32* %13, align 4
  %39 = load i32, i32* %14, align 4
  %40 = call i32 @scale4x_buf(i8* %31, i32 %32, i8* %33, i32 %34, i8* %35, i32 %36, i32 %37, i32 %38, i32 %39)
  %41 = load i8*, i8** %16, align 8
  %42 = call i32 @free(i8* %41)
  br label %43

43:                                               ; preds = %30, %29
  ret void
}

declare dso_local i8* @malloc(i32) #1

declare dso_local i32 @scale4x_buf(i8*, i32, i8*, i32, i8*, i32, i32, i32, i32) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
